# ptrace-gui

./: Cargo.toml  LICENSE-MIT  README.md
demo/: example.c
examples/ptrace-gui/: Cargo.toml
examples/ptrace-gui/src/: main.rs
src/: args.rs  lib.rs  log_item.rs  main.rs  manage_processes_loop.rs  message.rs  syscall_info.rs  timeline_entry.rs  tracer_event.rs  tracer_manager.rs
