[package]
name = "ptrace-gui"
version = "0.0.1"
description = "A downsized alternative to strace with a GUI."
authors = ["Maxime Bourreau"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MaximeBourreau/ptrace-gui"
edition = "2024"

# Includes the syscall tables for all architectures.
all = [
#    "arm", "mips", "mips64", "powerpc", "powerpc64", "s390x",
#    "sparc", "sparc64", "x86",
    "x86_64", "riscv64", "aarch64"
]

# Enable syscall tables for individual architectures.
aarch64 = []
#arm = []
#mips = []
#mips64 = []
#powerpc = []
#powerpc64 = []
#s390x = []
#sparc = []
#sparc64 = []
#x86 = []
x86_64 = []
riscv64 = []

[dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15.8"
iced = { version = "0.13.1", features = ["tokio"] }
libc = "0.2"
nix = { version = "0.30.1", features = ["personality", "ptrace", "signal"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syscalls = { version = "0.6.14", features = ["full"] }
tokio = { version = "1.45.1", features = ["sync"] }
tokio-stream = "0.1.17"
uzers = "0.12"
